--- a/my-page/index.html
+++ b/my-page/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=pr, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title> my project</title>
 </head>
 <body>
   
