--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div class="top-bar">
         <a href="#" class="top-bar__logo">
-          <img src="image/logo.png" alt="Bose logo">
+          <img src="images/header.png" alt="Bose logo">
         </a>
         <div class="top-bar__icons">
           <a href="#" class="icon icon--phone"></a>
@@ -46,7 +46,7 @@
     <aside class="page__menu menu" id="menu">
       <div class="top-bar menu__top">
         <a href="#" class="top-bar__logo">
-          <img src="image/logo.png" alt="Bose logo">
+          <img src="images/header.png" alt="Bose logo">
         </a>
 
         <a href="#" class="icon icon--close"></a>
