--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="style.css"
     />
     <script
       src="scripts/main.js"
