--- a/index.html
+++ b/index.html
@@ -1,101 +1,64 @@
-<!-- #region head -->
 <!doctype html>
-<html lang="en" class="page">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <title>Bose</title>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap"
-    rel="stylesheet">
-
+    <title>Stars</title>
     <link
       rel="stylesheet"
-      href="style.css"
+      href="./style.css"
     />
-    <script
-      src="scripts/main.js"
-      defer
-    ></script>
   </head>
-  <!-- endregion -->
-  <body class="page__body">
-    <header class="header">
-      <div class="top-bar">
-        <a href="#" class="top-bar__logo">
-          <img src="images/header.png" alt="Bose logo">
-        </a>
-        <div class="top-bar__icons">
-          <a href="#" class="icon icon--phone"></a>
-          <a href="#menu" class="icon icon--menu"></a>
-        </div>
-
+  <body class="body__box">
+    <div class="stars__container">
+      <div class="stars stars--0">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
-
-      <div class="header__bottom">
-        <h1 class="header__title">
-         Your senses.
-          <br>
-         Set free.
-        </h1>
+      <div class="stars stars--1">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
-    </header>
-
-    <aside class="page__menu menu" id="menu">
-      <div class="top-bar menu__top">
-        <a href="#" class="top-bar__logo">
-          <img src="images/header.png" alt="Bose logo">
-        </a>
-
-        <a href="#" class="icon icon--close"></a>
+      <div class="stars stars--2">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
-      <div class="menu__content">
-        <nav class="nav menu__nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link" href="#recomended">Recomended</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#categories">Categories</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#about-us">About Us</a>
-            </li>
-            <li class="nav__item">
-              <a class="nav__link" href="#contact-us">Contact Us</a>
-            </li>
-          </ul>
-        </nav>
-
-        <a href="tel:+1 234 5555-55-55" class="menu__phone-number">
-          +1 234 5555-55-55
-        </a>
-        <a href="tel:+1 234 5555-55-55" class="menu__call-to-order">
-            Call to order
-        </a>
+      <div class="stars stars--3">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
-    </aside>
-
-    <main class="main">
-      <section class="recommended" id="recommended">
-        <h2>Recomended</h2>
-      </section>
-
-      <section class="categories" id="categories">
-        <h2>Browse Bose products by category</h2>
-      </section>
-
-      <section class="about-us" id="about-us">
-        <h2>About Us</h2>
-      </section>
-
-      <section class="contact-us" id="contact-us">
-        <h2>Contacts Us</h2>
-      </section>
-    </main>
-
-    <footer class="footer"></footer>
+      <div class="stars stars--4">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+      </div>
+      <div class="stars stars--5">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+      </div>
+    </div>
   </body>
 </html>
