created animation page stars

--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
         <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
       <div class="stars stars--1">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
@@ -37,8 +47,18 @@
         <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
       <div class="stars stars--3">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
@@ -51,8 +71,18 @@
         <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
       </div>
       <div class="stars stars--5">
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
+        <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
         <div class="stars__star"></div>
